--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -15,7 +15,7 @@
             </li>
             <li class="nav__item" routerLinkActive='active'>
                 <!-- <a class="nav__link drop" [routerLink]="['tools']"> -->
-                <a class="nav__link drop" href="#categories">
+                <a class="nav__link drop" [routerLink]="['tools']">
                     Инструменты
                 </a>
                 <div class="arrow-down">
@@ -33,7 +33,7 @@
                                 <path d="M2 2L7 7L2 12" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             <div class="side-drop-menu">
-                                <a *ngFor="let tool of this.tools.electro.includedTypes">
+                                <a *ngFor="let tool of this.tools.electro.includedTypes; index as i" [routerLink]="['tools', 'electro', this.tools.electro.includedIds[i]]">
                                     {{tool}}
                                 </a>
                             </div>
@@ -46,7 +46,7 @@
                                 <path d="M2 2L7 7L2 12" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             <div class="side-drop-menu">
-                                <a *ngFor="let tool of this.tools.benzo.includedTypes">
+                                <a *ngFor="let tool of this.tools.benzo.includedTypes; index as i" [routerLink]="['tools', 'benzo', this.tools.benzo.includedIds[i]]">
                                     {{tool}}
                                 </a>
                             </div>
@@ -59,7 +59,7 @@
                                 <path d="M2 2L7 7L2 12" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             <div class="side-drop-menu">
-                                <a *ngFor="let tool of this.tools.garden.includedTypes">
+                                <a *ngFor="let tool of this.tools.garden.includedTypes; index as i" [routerLink]="['tools', 'garden', this.tools.garden.includedIds[i]]">
                                     {{tool}}
                                 </a>
                             </div>
@@ -72,7 +72,7 @@
                                 <path d="M2 2L7 7L2 12" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             <div class="side-drop-menu">
-                                <a *ngFor="let tool of this.tools.compressors.includedTypes">
+                                <a *ngFor="let tool of this.tools.compressors.includedTypes; index as i" [routerLink]="['tools', 'compressors', this.tools.compressors.includedIds[i]]">
                                     {{tool}}
                                 </a>
                             </div>
@@ -85,7 +85,7 @@
                                 <path d="M2 2L7 7L2 12" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             <div class="side-drop-menu">
-                                <a *ngFor="let tool of this.tools.generators.includedTypes">
+                                <a *ngFor="let tool of this.tools.generators.includedTypes; index as i" [routerLink]="['tools', 'generators', this.tools.generators.includedIds[i]]">
                                     {{tool}}
                                 </a>
                             </div>
@@ -98,7 +98,7 @@
                                 <path d="M2 2L7 7L2 12" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             <div class="side-drop-menu">
-                                <a *ngFor="let tool of this.tools.welding.includedTypes">
+                                <a *ngFor="let tool of this.tools.welding.includedTypes; index as i" [routerLink]="['tools', 'welding', this.tools.welding.includedIds[i]]">
                                     {{tool}}
                                 </a>
                             </div>
@@ -111,7 +111,7 @@
                                 <path d="M2 2L7 7L2 12" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             <div class="side-drop-menu">
-                                <a *ngFor="let tool of this.tools.heatguns.includedTypes">
+                                <a *ngFor="let tool of this.tools.heatguns.includedTypes; index as i" [routerLink]="['tools', 'heatguns', this.tools.heatguns.includedIds[i]]">
                                     {{tool}}
                                 </a>
                             </div>
@@ -124,7 +124,7 @@
                                 <path d="M2 2L7 7L2 12" stroke="black" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                             <div class="side-drop-menu">
-                                <a *ngFor="let tool of this.tools.rest.includedTypes">
+                                <a *ngFor="let tool of this.tools.rest.includedTypes; index as i" [routerLink]="['tools', 'rest', this.tools.rest.includedIds[i]]">
                                     {{tool}}
                                 </a>
                             </div>
@@ -146,7 +146,6 @@
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M19.9399 18.5624L13.4474 12.0699C14.4549 10.7675 14.9999 9.17496 14.9999 7.49997C14.9999 5.49498 14.2174 3.61498 12.8024 2.19749C11.3874 0.779996 9.50246 0 7.49997 0C5.49748 0 3.61248 0.782496 2.19749 2.19749C0.779996 3.61248 0 5.49498 0 7.49997C0 9.50246 0.782496 11.3874 2.19749 12.8024C3.61248 14.2199 5.49498 14.9999 7.49997 14.9999C9.17496 14.9999 10.765 14.4549 12.0674 13.4499L18.5599 19.9399C18.579 19.959 18.6016 19.9741 18.6264 19.9844C18.6513 19.9947 18.678 20 18.7049 20C18.7318 20 18.7585 19.9947 18.7834 19.9844C18.8083 19.9741 18.8309 19.959 18.8499 19.9399L19.9399 18.8524C19.959 18.8334 19.9741 18.8108 19.9844 18.7859C19.9947 18.761 20 18.7343 20 18.7074C20 18.6805 19.9947 18.6538 19.9844 18.6289C19.9741 18.6041 19.959 18.5815 19.9399 18.5624ZM11.46 11.46C10.4 12.5174 8.99496 13.0999 7.49997 13.0999C6.00497 13.0999 4.59998 12.5174 3.53998 11.46C2.48249 10.4 1.89999 8.99496 1.89999 7.49997C1.89999 6.00497 2.48249 4.59748 3.53998 3.53998C4.59998 2.48249 6.00497 1.89999 7.49997 1.89999C8.99496 1.89999 10.4025 2.47999 11.46 3.53998C12.5174 4.59998 13.0999 6.00497 13.0999 7.49997C13.0999 8.99496 12.5174 10.4025 11.46 11.46Z" fill="#131522"/>
                         </svg>
-                            
                     </button>
                 </form>
             </li>
@@ -172,14 +171,14 @@
             <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/house/mkad_32_y_kilometr_vl15/Z04Ycw5oS0wCQFtvfXl2dHxgZg==/?ll=37.598295%2C55.575032&utm_medium=mapframe&utm_source=maps&z=17.09" style="color:#eee;font-size:12px;position:absolute;top:14px;">МКАД, 32-й километр, вл15 — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCQ~NCAzsD" width="490" height="280" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
         </div>
         <div class="footer__nav">
-            <a href="">Электроинструмент</a>
-            <a href="">Бензоинструмент</a>
-            <a href="">Сварочные аппараты</a>
-            <a href="">Генераторы</a>
-            <a href="">Компрессоры</a>
-            <a href="">Техника для отдыха</a>
-            <a href="">Садовая техника</a>
-            <a href="">Тепловые пушки</a>
+            <a [routerLink]="['tools', 'electro']">Электроинструмент</a>
+            <a [routerLink]="['tools', 'benzo']">Бензоинструмент</a>
+            <a [routerLink]="['tools', 'welding']">Сварочные аппараты</a>
+            <a [routerLink]="['tools', 'generator']">Генераторы</a>
+            <a [routerLink]="['tools', 'compressor']">Компрессоры</a>
+            <a [routerLink]="['tools', 'rest']">Техника для отдыха</a>
+            <a [routerLink]="['tools', 'garden']">Садовая техника</a>
+            <a [routerLink]="['tools', 'heatgun']">Тепловые пушки</a>
         </div>
         <div class="footer__contacts">
             <a href="tel: +7 (495) 123-45-67">+7 (495) 123-45-67</a>
