--- a/RemTool/ClientApp/src/app/swiper/swiper.component.html
+++ b/RemTool/ClientApp/src/app/swiper/swiper.component.html
@@ -10,7 +10,7 @@
                 помогут определиться с ремонтом <br>
                 и ценами
             </p>
-            <button class="button_light" onclick="this.blur()">Оставить заявку</button>
+            <button class="button_light" onclick="this.blur()">ссылка на whatsapp</button>
             <!-- <img src="../../assets/img/consult 1.jpg" alt=""> -->
         </div>
         <div class="swiper-slide diagnostic-slide">
