--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
@@ -37,6 +37,19 @@ h1 {
     }
 }
 
+.brand {
+    & div {
+        display: flex;
+        justify-content: space-between;
+    }
+    & button {
+        height: 22px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
 .price {
     & label {
     }
@@ -66,7 +79,6 @@ h1 {
         display: flex;
         align-items: center;
         justify-content: center;
-
     }
 }
 
