--- a/RemTool/ClientApp/src/app/main-page/main-page.component.html
+++ b/RemTool/ClientApp/src/app/main-page/main-page.component.html
@@ -6,20 +6,20 @@
     </div>
     <app-swiper class="hero__slider"></app-swiper>
 </section>
-<section id="categories" class="we-repair">
+<section id="categories" class="we-repair" fragment="categories">
     <h2 class="main-h2">Мы ремонтируем</h2>
     <div class="we-repair__row row-2-col">
-        <a class="we-repair__electric" [routerLink]="['electro']">Электроинструмент</a>
-        <a class="we-repair__benzo" [routerLink]="['benzo']">Бензоинструмент</a>
+        <a class="we-repair__electric" [routerLink]="['tools', 'electro']">Электроинструмент</a>
+        <a class="we-repair__benzo" [routerLink]="['tools', 'benzo']">Бензоинструмент</a>
         
     </div>
     <div class="we-repair__row row-3-col">
-        <a class="we-repair__welding" [routerLink]="['welding']">Сварочные аппараты</a>
-        <a class="we-repair__generators" [routerLink]="['generator']">Генераторы</a>
-        <a class="we-repair__compressor" [routerLink]="['compressor']">Компрессоры</a>
-        <a class="we-repair__rest" [routerLink]="['rest']">Техника для отдыха</a>
-        <a class="we-repair__garden" [routerLink]="['garden']">Садовая техника</a>
-        <a class="we-repair__heater" [routerLink]="['heatgun']">Тепловые пушки</a>
+        <a class="we-repair__welding" [routerLink]="['tools', 'welding']">Сварочные аппараты</a>
+        <a class="we-repair__generators" [routerLink]="['tools', 'generator']">Генераторы</a>
+        <a class="we-repair__compressor" [routerLink]="['tools', 'compressor']">Компрессоры</a>
+        <a class="we-repair__rest" [routerLink]="['tools', 'rest']">Техника для отдыха</a>
+        <a class="we-repair__garden" [routerLink]="['tools', 'garden']">Садовая техника</a>
+        <a class="we-repair__heater" [routerLink]="['tools', 'heatgun']">Тепловые пушки</a>
     </div>
     
 </section>
