--- a/RemTool/ClientApp/src/app/main-page/main-page.component.scss
+++ b/RemTool/ClientApp/src/app/main-page/main-page.component.scss
@@ -196,5 +196,36 @@
     }
     &__process {
         width: 40%;
+        & img {
+            width: 100%;
+        }
     }
 }
+
+
+@media (max-width: 575.98px) {  }
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) {  }
+
+// Medium devices (tablets, less than 992px)
+@media (max-width: 991.98px) {
+    .hero {
+        margin-top: 60px;
+        display: flex;
+        flex-direction: column;
+        &__header {
+            width: 100%;
+            // font-size: 48px;
+            // font-weight: 800;
+            // line-height: 70px;
+        }
+        &__slider {
+            width: 100%;
+            // height: 340px;
+        }
+    }
+}
+
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) {  }
