--- a/RemTool/ClientApp/src/app/main-page/main-page.component.scss
+++ b/RemTool/ClientApp/src/app/main-page/main-page.component.scss
@@ -6,7 +6,7 @@
     align-items: center;
     &__header {
         width: 34%;
-        font-size: 48px;
+        font-size: 3rem;
         font-weight: 800;
         line-height: 70px;
     }
@@ -17,7 +17,7 @@
 }
 
 .main-h2 {
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 600;
     text-align: center;
     margin-bottom: 30px;
@@ -63,16 +63,18 @@
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
-    &__row {
-        &:first-of-type {
-            & a {
-                height: 160px;
-                font-size: 30px;
-            }
-        }
+    &__wrapper {
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1.5fr 1fr 1fr;
+    }
+    & a:nth-of-type(1), a:nth-of-type(2) {
+        height: 160px;
+        font-size: 1.8rem;
     }
     & a {
-        margin-bottom: 30px;
+        // margin-bottom: 30px;
         height: 100px;
         border-radius: 6px;
         background-color: grey;
@@ -83,7 +85,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 24px;
+        text-align: center;
+        font-size: 1.5rem;
         font-weight: 600;
         text-decoration: none;
         color: var(--light-color);
@@ -92,33 +95,38 @@
             color: var(--orange-color);
             // background-size: 120%;
         }
-        
     }
-    &__electric {
+    &__electro {
+        grid-column: 1/4;
         background-image: url('../../assets/img/electro-tools.jpg');
     }
     &__benzo {
+        grid-column: 4/7;
         background-image: url('../../assets/img/benzo-tools.jpg');
     }
     &__welding {
+        grid-column: 1/3;
         background-image: url('../../assets/img/welding.jpg');            
     }
     &__generators {
+        grid-column: 3/5;
         background-image: url('../../assets/img/generator.jpg');            
     }
     &__compressor {
+        grid-column: 5/7;
         background-image: url('../../assets/img/compressor.jpg');            
     }
     &__rest {
+        grid-column: 1/3;
         background-image: url('../../assets/img/boat-engine.jpg');            
     }
     &__garden {
+        grid-column: 3/5;
         background-image: url('../../assets/img/garden.jpg');            
-        
     }
     &__heater {
+        grid-column: 5/7;
         background-image: url('../../assets/img/heater.jpg');            
-
     }
 }
 
@@ -126,23 +134,31 @@
     height: 310px;
     width: 70%;
     margin: 0 auto 30px auto;
+    // display: flex;
     & > h2 {
         color: var(--light-color);
         padding-top: 30px;
     }
     &__wrapper {
-        display: flex;
+        // width: 100%;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
         justify-content: space-between;
-        align-items: flex-end;
+        align-items: flex-start;
     }
     &__item {
-        width: 178px;
-        font-size: 24px;
+        // width: 25%;
+        display: flex;
+        flex-direction: column;
+        margin: 0 16px;
+        font-size: 1.5rem;
         color: var(--light-color);
         font-weight: 600;
+        align-items: center;
         text-align: center;
+        // white-space: nowrap;
         & > img {
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
     }
     &::before {
@@ -167,11 +183,14 @@
 }
 
 .popular {
-    &__row {
+    &__wrapper {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 20px;
+        margin-bottom: 30px;
         & a {
             height: 100px;
             background-color: var(--grey-color);
-            margin-bottom: 30px;
             border-radius: 6px;
             text-decoration: none;
             color: var(--dark-color);
@@ -191,8 +210,8 @@
     }
     &__text {
         width: 57%;
-        font-size: 24px;
-        line-height: 36px;
+        font-size: 1.5rem;
+        line-height: 2.2rem;
     }
     &__process {
         width: 40%;
@@ -202,20 +221,21 @@
     }
 }
 
-
-@media (max-width: 575.98px) {  }
-
-// Small devices (landscape phones, less than 768px)
-@media (max-width: 767.98px) {  }
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) {  }
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
     .hero {
-        margin-top: 60px;
+        margin-top: 0;
         display: flex;
         flex-direction: column;
         &__header {
             width: 100%;
+            // line-height: 20px;
+            text-align: center;
+            margin-bottom: 20px;
+            // margin-top: 0;
             // font-size: 48px;
             // font-weight: 800;
             // line-height: 70px;
@@ -225,7 +245,105 @@
             // height: 340px;
         }
     }
+    .description__text {
+        // font-size: 1.3rem;
+        // line-height: 24px;
+    }
+    .advantage {
+        width: 100%;
+    }
 }
 
-// Large devices (desktops, less than 1200px)
-@media (max-width: 1199.98px) {  }
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) {
+    .hero__header {
+        font-size: 2.5rem;
+        line-height: 50px;
+    }
+    .description {
+        &__content {
+            flex-direction: column;
+        }
+        &__text {
+            width: 100%;
+        }
+        &__process {
+            margin-top: 20px;
+            width: 100%;
+        }
+    }
+
+    .advantage {
+        &__item {
+            font-size: 1rem;
+            & > img {
+                width: 100px;
+            }
+        }
+    }
+
+
+}
+
+@media (max-width: 683.98px) {
+    .we-repair {
+        &__wrapper {
+            grid-template-columns: repeat(2, 1fr);
+            & a {
+                font-size: 1.5rem;
+                grid-column: auto;
+            }
+            & a:nth-of-type(1), a:nth-of-type(2) {
+                font-size: 1.5rem;
+            }
+        }
+        // &__electro, &__benzo {
+        //     font-size: 1.5rem;
+        // }
+    }
+
+
+    .popular {
+        &__wrapper {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+}
+
+@media (max-width: 575.98px) {
+    .we-repair {
+        &__wrapper {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }
+    }
+
+    .advantage {
+        height: 510px;
+        &__wrapper {
+            grid-template-columns: repeat(2, 1fr);
+        }
+        &::before {
+            // height: 400px;
+        }
+        &__item {
+            margin: 16px 16px;
+            // width: 50%;
+        }
+    }
+
+    .main-h2 {
+        font-size: 1.8rem;
+    }
+}
+
+@media (max-width: 424.98px) {
+    .popular {
+        &__wrapper {
+            grid-template-columns: 1fr;
+            & a {
+                height: 60px;
+            }
+        }
+    }
+}
