--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -16,6 +16,10 @@
     --grey-grad: linear-gradient(145deg, #CED1E9 0%, #EFF0F8 100%);
 }
 
+html {
+    font-size: 16px;
+}
+
 body {
     max-width: 1250px;
     margin: 0 auto;
@@ -26,8 +30,24 @@ body {
     // height: 100%;
 }
 
-@media screen and (max-width: 1199px) {
+.locked {
+    overflow: hidden;
 }
+
+@media (max-width: 575.98px) {  }
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) {  }
+
+// Medium devices (tablets, less than 992px)
+@media (max-width: 991.98px) {
+    html {
+        font-size: 14px;
+    }
+}
+
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) {  }
 
 .button_light {
     font-family: 'Jost', sans-serif;
@@ -78,3 +98,4 @@ body {
         }
     }
 }
+
