--- a/RemTool/ClientApp/src/app/tool-page/tool-page.component.html
+++ b/RemTool/ClientApp/src/app/tool-page/tool-page.component.html
@@ -5,15 +5,22 @@
     <h2 class="tool-page__title">
         {{res$.name}}
     </h2>
-    <img src={{res$.imgRefenrence}} alt="">
+    <img class="tool-page__image" src={{res$.imgRefenrence}} alt="">
     <div class="tool-page__pricelist">
-        <div class="pricelist-column">
-            Услуга
-            <p *ngFor="let serve of res$.serves">{{serve}}</p>
+        <!-- <div class="pricelist-column">
+            <p>Услуга</p> -->
+        <div class="pricelist-wrapper" *ngFor="let serve of res$.serves, index as i">
+            <div>
+                {{res$.serves[i]}}
+            </div>
+            <div>
+                {{res$.costs[i]}}
+            </div>
         </div>
+        <!-- <p *ngFor="let cost of res$.costs"></p> -->
+        <!-- </div>
         <div class="pricelist-column">
-            Стоимость
-            <p *ngFor="let cost of res$.costs">{{cost}}</p>
-        </div>
+            <p>Стоимость</p>
+        </div> -->
     </div>
 </div>
