--- a/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
+++ b/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
@@ -10,12 +10,18 @@
       <!-- <li routerLinkActive="active">
         <a [routerLink]="['/admin', 'edit']">Редактировать инструмент</a>
       </li> -->
+      <li>
+        <button class="button_light" (click)="createBackup()">Создать бекап</button>
+      </li>
+      <li>
+        <button class="button_light" (click)="restoreSite()">Восстановить сайт</button>
+      </li>
       <li routerLinkActive="active">
         <a [routerLink]="['/admin', 'tooltypes']">ToolTypes</a>
       </li>
-      <li routerLinkActive="active">
+      <!-- <li routerLinkActive="active">
         <a [routerLink]="['/admin', 'spareparts']">SpareParts</a>
-      </li>
+      </li> -->
       <li routerLinkActive="active">
         <a href="#" (click)="logout($event)">Выход</a>
       </li>
