--- a/RemTool/ClientApp/src/app/tool-page/tool-page.component.scss
+++ b/RemTool/ClientApp/src/app/tool-page/tool-page.component.scss
@@ -1,16 +1,34 @@
 .tool-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     &__title {
         font-size: 24px;
         text-align: center;
     }
     &__image {
-
+        width: 100%;
+        max-width: 200px;
+        margin: 0 auto;
+        text-align: center;
     }
     &__pricelist {
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+        width: 100%;
+        max-width: 800px;
+        background-color: var(--grey-color);
+        padding: 10px;
+        border-radius: 6px;
+        box-sizing: border-box;
+        // max-width: 100%;
+        & div {
+            line-height: 1.5rem;
+        }
     }
 }
 
 .pricelist-column {
-    display: block;
+    // display: block;
 }
