--- a/RemTool/ClientApp/src/app/tools-page/tools-page.component.scss
+++ b/RemTool/ClientApp/src/app/tools-page/tools-page.component.scss
@@ -7,14 +7,14 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 30px;
-    grid-auto-rows: auto;
-    grid-auto-columns: auto;
+    // grid-auto-rows: auto;
+    // grid-auto-columns: auto;
     justify-items: start;
     margin-bottom: 60px;
 }
 
 .tool {
-    width: 282px;
+    width: 100%;
     height: 200px;
     box-sizing: border-box;
     background-color: var(--grey-color);
@@ -28,10 +28,41 @@
     color: var(--dark-color);
     &__title {
         font-size: 18px;
+        text-align: center;
     }
     &__image {
+
         width: auto;
-        height: 80%;
+        max-width: 100%;
+        max-height: 80%;
+        // width: 100%;
+        // size: 100%;
     }
     // display: block;
+}
+
+@media (max-width: 767.98px) {
+    .tools-container {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 16px;
+    }
+    .tool {
+        height: 150px;
+        &__title {
+            font-size: 14px;
+        }
+    }
+}
+
+@media (max-width: 683.98px) {
+    .tools-container {
+        margin-top: 0;
+    }
+}
+
+@media (max-width: 463.98px) {
+    .tools-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
 }
