--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -30,8 +30,11 @@ body {
     // height: 100%;
 }
 
-.locked {
-    overflow: hidden;
+.main-h2 {
+    font-size: 2.25rem;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
 @media (max-width: 575.98px) {  }
