--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'reset.scss';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
-@import 'swiper/swiper-bundle.css';
+@import "~swiper/swiper-bundle";
 @import '~quill/dist/quill.snow.css';
 
 
