--- a/RemTool/ClientApp/src/app/preloader/preloader.component.html
+++ b/RemTool/ClientApp/src/app/preloader/preloader.component.html
@@ -1,4 +1,5 @@
-<div id="cube-loader">
+<!-- <div class="preloader"> -->
+  <div id="cube-loader">
     <div class="caption">
       <div class="cube-loader">
         <div class="cube loader-1"></div>
@@ -8,3 +9,4 @@
       </div>
     </div>
   </div>
+<!-- </div> -->
