--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -1,15 +1,12 @@
 <header class="header">
-    <app-top-preloader></app-top-preloader>
+    <!-- <app-top-preloader></app-top-preloader> -->
     <div class="header__topper">
         <span class="header__hours">График работы: пн-пт 10:00-20:00</span>
         <a class="header__adress" href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА 256</a>
         <a class="header__mob-phone" href="tel: +7 (495) 123-45-67">
             +7 (495) 123-45-67
         </a>
-
-        <button class="button_light" onclick="this.blur()">
-            Оставить заявку
-        </button>
+        <app-send-request></app-send-request>
     </div>
     <nav class="header__nav nav">
         <a class="header__logo" [routerLink]="['/']" routerLinkActive='active'>
