--- a/RemTool/ClientApp/src/app/tool-page/tool-page.component.html
+++ b/RemTool/ClientApp/src/app/tool-page/tool-page.component.html
@@ -1,24 +1,15 @@
-<div *ngIf="!res$">
-    <app-preloader></app-preloader>
-</div>
-<div *ngIf="!!res$" class="tool-page">
-    <h2 class="tool-page__title">
+<app-preloader *ngIf="!res$"></app-preloader>
+<div class="tool-page">
+    <h2 *ngIf="!!res$" class="tool-page__title">
         {{res$.name}}
     </h2>
-    <img class="tool-page__image" src={{res$.imgRefenrence}} alt="">
-    <div class="tool-page__pricelist">
-        <!-- <div class="pricelist-column">
-            <p>Услуга</p> -->
+    <img *ngIf="!!res$" class="tool-page__image" src={{res$.imgRefenrence}} alt="">
+    <div *ngIf="!!res$" class="tool-page__pricelist">
         <div class="pricelist-wrapper">
             <div class="pricelist__row" *ngFor="let serve of res$.serves; index as i">
                 <div>{{serve}}</div>
                 <div>{{res$.costs[i]}}</div>
             </div>
         </div>
-        <!-- <p *ngFor="let cost of res$.costs"></p> -->
-        <!-- </div>
-        <div class="pricelist-column">
-            <p>Стоимость</p>
-        </div> -->
     </div>
 </div>
