--- a/RemTool/ClientApp/src/app/tools-page/tools-page.component.scss
+++ b/RemTool/ClientApp/src/app/tools-page/tools-page.component.scss
@@ -2,6 +2,7 @@
 //     display: none;
 // }
 .tools-container {
+    min-height: 200px;
     margin-top: 60px;
     width: 100%;
     display: grid;
