--- a/RemTool/ClientApp/src/app/send-request/send-request.component.html
+++ b/RemTool/ClientApp/src/app/send-request/send-request.component.html
@@ -1,3 +1,6 @@
-<button class="button_light" onclick="this.blur()">
+<button class="button_light" (click)="sendRequest()">
     Оставить заявку
 </button>
+<div class="request-form" ngForm>
+
+</div>
