--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.scss
@@ -106,18 +106,6 @@ ul {
     }
 }
 
-.search-result {
-    top: 60px;
-    position: absolute;
-    padding: 10px;
-    width: 100%;
-    height: 200px;
-    background-color: var(--grey-color);
-    z-index: 2;
-    border-radius: 6px;
-    box-shadow: 0px 8px 16px 0px rgba(52, 52, 52, 0.2);
-    box-sizing: border-box;
-}
 
 input, textarea, select {
     appearance: none;
@@ -294,6 +282,7 @@ input[type=search] {
     flex-wrap: wrap;
     background: var(--grey-grad);
     & a {
+        display: block;
         text-decoration: none;
         font-size: 14px;
         font-weight: 600;
@@ -308,6 +297,49 @@ input[type=search] {
             color: var(--orange-color);
             border: 2px solid var(--orange-color);
         }
+    }
+}
+
+.search-result {
+    min-height: auto;
+    z-index: 5;
+    margin: 0;
+    top: 60px;
+    border-radius: 6px;
+    box-shadow: var(--shadow);
+    overflow: hidden;
+}
+
+.search-reset {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 0;
+    vertical-align: middle;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    outline: none;
+    background: none;
+    border: none;
+    box-sizing: border-box;
+    &::before, &::after {
+        content: '';
+        position: absolute;
+        top: calc(50% - 1px);
+        left: -3px;
+        width: 26px;
+        height: 2px;
+        background-color: var(--dark-color);
+    }
+    &::before {
+        transform: rotate(45deg);
+    }
+    &::after {
+        transform: rotate(-45deg);
+    }
+    &:active {
+        transform: scale(0.9);
     }
 }
 
@@ -434,6 +466,10 @@ input[type=search] {
     .header {
         margin-bottom: 60px;
     }
+    .search-result {
+        max-width: none;
+        min-width: 498px;
+    }
     .header__search {
         position: absolute;
         top: 100px;
@@ -481,6 +517,7 @@ input[type=search] {
     .side-drop-menu {
         width: 35vw;
     }
+    
 
     .footer {
         &::before {
@@ -534,6 +571,7 @@ input[type=search] {
         z-index: 2;
         top: 116px;
         width: calc(100% - 32px);
+        max-width: calc(100% - 32px);
     }
     .footer {
         &__map {
