--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -14,6 +14,7 @@
     --alarm-color: #E2352A;
     --green-color: #409D3E;
     --grey-grad: linear-gradient(145deg, #CED1E9 0%, #EFF0F8 100%);
+    --shadow: 0px 4px 8px 0px rgba(56, 56, 56, 0.28);
 }
 
 html {
